--- a/编写脚本程序.md
+++ b/编写脚本程序.md
@@ -77,7 +77,7 @@ CONTROL w
 ```
 REM 这一行是注释.
 ```
-
+<a name="DEFAULTDELAY"></a>
 ### DEFAULTDELAY
 
 **指令延迟**，每一行指令执行完都要等一下才执行下一行指令，`DEFAULTDELAY`是默认延迟时间，单位毫秒。如果不设置，默认18毫秒。
@@ -95,7 +95,7 @@ REM duckyPad每行指令执行完等待100毫秒
 DEFAULTDELAYFUZZ 500
 REM 加上0-500毫秒的随机延迟
 ```
-
+<a name="DEFAULTCHARDELAY"></a>
 ### DEFAULTCHARDELAY
 
 **按键延迟**，每个按键之间的延迟时间，单位毫秒，默认值18毫秒。
@@ -114,7 +114,7 @@ REM 每按一个键后，duckyPad将等待50毫秒
 DEFAULTDELAYFUZZ 500
 REM 加上0-500毫秒的按键随机延迟
 ```
-
+<a name="DELAY"></a>
 ### DELAY
 
 **等待**，等待指定的时间，程序再往下执行，为了保证网页加载完成，程序启动好时就用它。
@@ -124,7 +124,7 @@ DELAY 1000
 
 REM 等待1000毫秒（1秒）再往下执行
 ```
-
+<a name="STRING"></a>
 ### STRING
 
 **文本输入**，就是自动打字，注意电脑的输入法先切换成英文，中文未测试。
@@ -134,7 +134,7 @@ STRING Hello world!!!
 
 REM duckyPad帮你自动输入 "Hello world!!!"
 ```
-
+<a name="REPEAT"></a>
 ### REPEAT
 
 重复上一条指令 **`n`** 次.
@@ -145,7 +145,7 @@ REPEAT 10
 
 REM 输出"Hello world" 11 次 (原始1次 + 重复10次)
 ```
-
+<a name="Special-Keys"></a>
 ### Special Keys
 
 特殊按键，以下是duckyPad支持的:
@@ -251,7 +251,7 @@ KP_EQUAL
 
 ------
 
-
+<a name="Mouse-Buttons"></a>
 ### 鼠标按键
 
 * `LMOUSE`: 点击鼠标左键
@@ -259,7 +259,7 @@ KP_EQUAL
 * `RMOUSE`: 点击鼠标右键
 
 * `MMOUSE`: 点击鼠标中键
-
+<a name="MOUSE_MOVE-X-Y"></a>
 ### MOUSE_MOVE X Y
 
 **移动鼠标**，水平移动X，竖直移动Y
@@ -271,7 +271,7 @@ KP_EQUAL
 * `Y`, 正往上，负往下.
 
 * 要移动到更远，可以多次使用本指令，或使用`REPEAT`指令.
-
+<a name="MOUSE_WHEEL-X"></a>
 ### MOUSE_WHEEL X
 
 **鼠标滚轮**，滚动 `X` 行.
@@ -279,7 +279,7 @@ KP_EQUAL
 * `X` 必须在 `-127` 到 `127`之间
 
 * 正向上滚，负向下滚.
-
+<a name="KEYDOWN--KEYUP"></a>
 ### KEYDOWN / KEYUP
 
 **按住/弹起 按键**.
@@ -293,7 +293,7 @@ KEYUP SHIFT
 
 REM 输出大写的 HELLO
 ```
-
+<a name="SWCOLOR"></a>
 ### SWCOLOR
 
 **改变按键的背光灯颜色**
@@ -313,15 +313,15 @@ REM 按键1设置成绿色
 ```
 
 *  `R G B` 的值在 `0` 到 `255`之间. 0 关闭, 255 最亮.
-
+<a name="DP_SLEEP"></a>
 ### DP_SLEEP
 
 **休眠**，duckyPad的屏幕熄灭，按键灯关闭，任意键唤醒
-
+<a name="PREV_PROFILE--NEXT_PROFILE"></a>
 ### PREV_PROFILE / NEXT_PROFILE
 
 **翻页**，向前/向后翻页
-
+<a name="GOTO_PROFILE"></a>
 ### GOTO_PROFILE
 
 **翻到指定页**
@@ -330,11 +330,11 @@ REM 按键1设置成绿色
 GOTO_PROFILE 3 
 REM 翻到第3页
 ```
-
+<a name="HOLD-experimental"></a>
 ### HOLD (experimental)
 
 实验性功能，用法参考英文版。
-
+<a name="LOOP-experimental"></a>
 ### LOOP
 
 **程序分段**，高阶功能。如以下程序，第一次按键的时候执行LOOP1，第二次执行LOOP2...
